[package]
name = "qrgen"
version = "0.1.0"
authors = ["Matthias Thoemmes <thoemmes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcodegen = "1"
clap = "2"

[profile.release]
lto = true
codegen-units = 1
